--- a/edmunds/src/main/res/values/strings.xml
+++ b/edmunds/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Edmunds</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="label_count">Count</string>
 </resources>
