--- a/edmunds/src/main/res/values/strings.xml
+++ b/edmunds/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="label_count">Count</string>
+    <string name="label_all">All</string>
 </resources>
